name:                   cantloaderror
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
-- copyright:
category:               Web
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable cantloaderror
  main-is:              Main.hs
  other-modules:        CantLoadError.Types,
                        CantLoadError.TypesTH
  -- other-extensions:
  build-depends:        base >=4.7 && <4.9,
                        Spock >=0.7.10.0,
                        mtl,
                        transformers,
                        transformers-base,
                        exceptions,
                        text,
                        clay,
                        blaze-html,
                        reroute,
                        template-haskell,
                        amazonka,
                        amazonka-core,
                        amazonka-dynamodb,
                        bytestring,
                        wiring,
                        digestive-functors,
                        digestive-functors-blaze,
                        Spock-digestive,
                        uuid,
                        lens,
                        monad-control,
                        unordered-containers,
                        hvect
  hs-source-dirs:       src
  default-language:     Haskell2010